@@ -2,6 +2,7 @@ CHANGELOG for Plupload integration for Drupal 7
 
 Plupload integration 7.x-1.x-dev
 ================================
+- #1219992 by slashrsm, axe312, Dave Reid: Add support for Drupal native translations.
 - #1111054 by George Petsagourakis: Convert plupload_fix_temporary_filename() a private function
 - #1316438 by jcfiala, slashrsm: Plupload in AJAX call causes form.submit handler to be added multiple times
 - #1300620 by jamiecuthill, ksenzee: Update to 1.5.1.1 because uploading is broken in Firefox 7
